--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
       icon: package
       type: npm package
   annotations:
-    backstage.io/techdocs-ref: url:https://dev.azure.com/JLL-Applications/Jll.Capability.DesignSystem/_git/ArchivedRepo1
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: npm package
   lifecycle: production
